exercice|add harder cryptarithmetic example

--- a/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
+++ b/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
        " W <= 9]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        " Distinct(F, O, R, T, U, W)]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +230,7 @@
        " F*1000 + O*100 + U*10 + R*1]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,579 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "---\n",
+    "#### Other Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "  S E N D  :    9 5 7 9\n",
+    "+ M O R E  :  + 1 0 8 5\n",
+    "---------  :  ---------\n",
+    "M O N E Y  :  1 0 6 5 2\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ca_solver = Solver()  # create an instance of a Z3 CSP solver\n",
+    "\n",
+    "for letter in 'SENDMORY':\n",
+    "    exec(\"{} = Int('{}')\".format(letter, letter)) # create an z3.Int type variable instance\n",
+    "\n",
+    "for z3_int in [S,E,N,D,M,O,R,Y]:\n",
+    "    ca_solver.add(0 <= z3_int, z3_int <= 9)  # add constraints to the solver: 0 <= letter <= 9"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add constraints prohibiting leading digits F & T from taking the value 0\n",
+    "ca_solver.add(S!=0)\n",
+    "ca_solver.add(M!=0)\n",
+    "\n",
+    "# Add a Distinct constraint for all the variables\n",
+    "ca_solver.add(Distinct([S,E,N,D,M,O,R,Y]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ca_solver.add(((S + M)*10**3 + (E + O)*10**2 + (N + R)*10**1 + (D + E)*10**0) == (M*10**4 + O*10**3 + N*10**2 + E*10**1 + Y*10**0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  S E N D  :    9 5 6 7\n",
+      "+ M O R E  :  + 1 0 8 5\n",
+      "---------  :  -------------\n",
+      "M O N E Y  :  1 0 6 5 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "assert ca_solver.check() == sat, \"Uh oh...the solver did not find a solution. Check your constraints.\"\n",
+    "print(\"  S E N D  :    {} {} {} {}\".format(ca_solver.model()[S], ca_solver.model()[E], ca_solver.model()[N], ca_solver.model()[D]))\n",
+    "print(\"+ M O R E  :  + {} {} {} {}\".format(ca_solver.model()[M], ca_solver.model()[O], ca_solver.model()[R], ca_solver.model()[E]))\n",
+    "print(\"---------  :  -------------\")\n",
+    "print(\"M O N E Y  :  {} {} {} {} {}\".format(ca_solver.model()[M], ca_solver.model()[O], ca_solver.model()[N], ca_solver.model()[E], ca_solver.model()[Y]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Other Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "        T E N\n",
+    "+ H E R O N S\n",
+    "+     R E S T\n",
+    "+     N E A R\n",
+    "+   N O R T H\n",
+    "+       S E A\n",
+    "+   S H O R E\n",
+    "+         A S\n",
+    "+       T A N\n",
+    "+   T E R N S\n",
+    "+     S O A R\n",
+    "+         T O\n",
+    "+   E N T E R\n",
+    "+   T H E R E\n",
+    "+         A S\n",
+    "+ H E R O N S\n",
+    "+     N E S T\n",
+    "+         O N\n",
+    "+ S T O N E S\n",
+    "+         A T\n",
+    "+   S H O R E\n",
+    "+   T H R E E\n",
+    "+   S T A R S\n",
+    "+       A R E\n",
+    "+     S E E N\n",
+    "+     T E R N\n",
+    "+ S N O R E S\n",
+    "+       A R E\n",
+    "+     N E A R\n",
+    "-------------\n",
+    "S E V V O T H\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "equation = \"TEN + HERONS + REST + NEAR + NORTH + SEA + SHORE + AS + TAN + TERNS + SOAR + TO + ENTER + THERE + AS + HERONS + NEST + ON + STONES + AT + SHORE + THREE + STARS + ARE + SEEN + TERN + SNORES + ARE + NEAR == SEVVOTH\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A', 'E', 'H', 'N', 'O', 'R', 'S', 'T', 'V'}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find all different letters in the equation\n",
+    "pattern = re.compile('[A-Z]+')\n",
+    "words = pattern.findall(equation)\n",
+    "letters = set(''.join(words))\n",
+    "letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ca_solver = Solver()  # create an instance of a Z3 CSP solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dictionnary of z3.Int type variable\n",
+    "int_dict = dict()\n",
+    "for letter in letters:\n",
+    "    exec(\"int_dict['{}'] = Int('{}')\".format(letter, letter)) # create an z3.Int type variable instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add constraint that each letter represent a digit (0-9)\n",
+    "for letter in letters:\n",
+    "    ca_solver.add(0 <= int_dict[letter], int_dict[letter] <= 9)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A', 'E', 'H', 'N', 'O', 'R', 'S', 'T'}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Find all leading letters\n",
+    "pattern = re.compile('(\\+){0,1}( )+([A-Z]){1}')\n",
+    "first_letters = set([x[2] for x in pattern.findall(equation)]).union(set('T'))\n",
+    "first_letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Leading zeroes are not allowed in a valid solution.\n",
+    "for letter in first_letters:\n",
+    "    ca_solver.add(int_dict[letter] != 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add a Distinct constraint for all the variables\n",
+    "ca_solver.add(Distinct(list(int_dict.values())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[A >= 0,\n",
+       " A <= 9,\n",
+       " R >= 0,\n",
+       " R <= 9,\n",
+       " S >= 0,\n",
+       " S <= 9,\n",
+       " H >= 0,\n",
+       " H <= 9,\n",
+       " T >= 0,\n",
+       " T <= 9,\n",
+       " O >= 0,\n",
+       " O <= 9,\n",
+       " E >= 0,\n",
+       " E <= 9,\n",
+       " N >= 0,\n",
+       " N <= 9,\n",
+       " V >= 0,\n",
+       " V <= 9,\n",
+       " A != 0,\n",
+       " R != 0,\n",
+       " S != 0,\n",
+       " H != 0,\n",
+       " T != 0,\n",
+       " O != 0,\n",
+       " E != 0,\n",
+       " N != 0,\n",
+       " Distinct(A, R, S, H, T, O, E, N, V)]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ca_solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'TEN + HERONS + REST + NEAR + NORTH + SEA + SHORE + AS + TAN + TERNS + SOAR + TO + ENTER + THERE + AS + HERONS + NEST + ON + STONES + AT + SHORE + THREE + STARS + ARE + SEEN + TERN + SNORES + ARE + NEAR == SEVVOTH'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "equation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import Counter\n",
+    "\n",
+    "# Count occurence of each letter per power of 10\n",
+    "unit = dict()\n",
+    "for i in range(max(map(len, words))):\n",
+    "    count = Counter([x.rjust(7)[-(i+1)] for x in words[:-1] if x.rjust(7)[-(i+1)] != ' '])\n",
+    "    if len(count) > 0:\n",
+    "        unit[i] = dict(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: {'N': 5, 'S': 8, 'T': 3, 'R': 4, 'H': 1, 'A': 1, 'E': 6, 'O': 1},\n",
+       " 1: {'E': 7, 'N': 3, 'S': 2, 'A': 7, 'T': 2, 'R': 7, 'O': 1},\n",
+       " 2: {'T': 3, 'O': 5, 'E': 7, 'R': 4, 'S': 1, 'N': 1, 'A': 3},\n",
+       " 3: {'R': 3, 'N': 4, 'O': 3, 'H': 4, 'E': 1, 'S': 2, 'T': 2},\n",
+       " 4: {'E': 3, 'N': 2, 'S': 3, 'T': 4},\n",
+       " 5: {'H': 2, 'S': 2}}"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unit"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"\"\n",
+    "for i in unit.keys():\n",
+    "    sub = \"\"\n",
+    "    for l, v in unit[i].items():\n",
+    "        sub = sub + \" + \"\n",
+    "        sub = sub + \"int_dict['{}'] * {}\".format(l, v)\n",
+    "    if i == 0:\n",
+    "        s = s + \"(\" + sub[3:] + \") * 10**{}\".format(i)\n",
+    "    else:\n",
+    "        s = s + \"+ (\" + sub[3:] + \") * 10**{}\".format(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "s = \"(\" + s + \")\" + \" == (\" + \"int_dict['S']*10**6 + int_dict['E']*10**5 + int_dict['V']*10**4 + int_dict['V']*10**3 + int_dict['O']*10**2 + int_dict['T']*10**1 + int_dict['H']*10**0\" + \")\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Equation constraint to solve\n",
+    "exec(\"ca_solver.add({})\".format(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[A >= 0,\n",
+       " A <= 9,\n",
+       " R >= 0,\n",
+       " R <= 9,\n",
+       " S >= 0,\n",
+       " S <= 9,\n",
+       " H >= 0,\n",
+       " H <= 9,\n",
+       " T >= 0,\n",
+       " T <= 9,\n",
+       " O >= 0,\n",
+       " O <= 9,\n",
+       " E >= 0,\n",
+       " E <= 9,\n",
+       " N >= 0,\n",
+       " N <= 9,\n",
+       " V >= 0,\n",
+       " V <= 9,\n",
+       " A != 0,\n",
+       " R != 0,\n",
+       " S != 0,\n",
+       " H != 0,\n",
+       " T != 0,\n",
+       " O != 0,\n",
+       " E != 0,\n",
+       " N != 0,\n",
+       " Distinct(A, R, S, H, T, O, E, N, V),\n",
+       " ... + ... + ... + ... + ... + ... == ...]"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ca_solver"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"((int_dict['N'] * 5 + int_dict['S'] * 8 + int_dict['T'] * 3 + int_dict['R'] * 4 + int_dict['H'] * 1 + int_dict['A'] * 1 + int_dict['E'] * 6 + int_dict['O'] * 1) * 10**0+ (int_dict['E'] * 7 + int_dict['N'] * 3 + int_dict['S'] * 2 + int_dict['A'] * 7 + int_dict['T'] * 2 + int_dict['R'] * 7 + int_dict['O'] * 1) * 10**1+ (int_dict['T'] * 3 + int_dict['O'] * 5 + int_dict['E'] * 7 + int_dict['R'] * 4 + int_dict['S'] * 1 + int_dict['N'] * 1 + int_dict['A'] * 3) * 10**2+ (int_dict['R'] * 3 + int_dict['N'] * 4 + int_dict['O'] * 3 + int_dict['H'] * 4 + int_dict['E'] * 1 + int_dict['S'] * 2 + int_dict['T'] * 2) * 10**3+ (int_dict['E'] * 3 + int_dict['N'] * 2 + int_dict['S'] * 3 + int_dict['T'] * 4) * 10**4+ (int_dict['H'] * 2 + int_dict['S'] * 2) * 10**5) == (int_dict['S']*10**6 + int_dict['E']*10**5 + int_dict['V']*10**4 + int_dict['V']*10**3 + int_dict['O']*10**2 + int_dict['T']*10**1 + int_dict['H']*10**0)\""
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert ca_solver.check() == sat, \"Uh oh...the solver did not find a solution. Check your constraints.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A', 'E', 'H', 'N', 'O', 'R', 'S', 'T', 'V'}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "letters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ans = dict()\n",
+    "for letter in letters:\n",
+    "    ans[letter] = ca_solver.model()[int_dict[letter]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': 2, 'R': 6, 'S': 1, 'H': 3, 'T': 9, 'O': 4, 'E': 5, 'N': 7, 'V': 8}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ans"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on method_descriptor:\n",
+      "\n",
+      "replace(self, old, new, count=-1, /)\n",
+      "    Return a copy with all occurrences of substring old replaced by new.\n",
+      "    \n",
+      "      count\n",
+      "        Maximum number of occurrences to replace.\n",
+      "        -1 (the default value) means replace all occurrences.\n",
+      "    \n",
+      "    If the optional argument count is given, only the first count occurrences are\n",
+      "    replaced.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(str.replace)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq = equation\n",
+    "for letter in letters:\n",
+    "    eq = eq.replace(letter, str(ans[letter]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "exec(\"print({})\".format(eq))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ---\n",
     "## II. Map Coloring\n",
     "\n",
     "[Map coloring](https://en.wikipedia.org/wiki/Map_coloring) is a classic example of CSPs. A map coloring problem is specified by a set of colors and a map showing the borders between distinct regions. A solution to a map coloring problem is an assignment of one color to each region of the map such that no pair of adjacent regions have the same color.\n",
@@ -288,13 +860,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 49,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# create instance of Z3 solver & declare color palette\n",
@@ -313,12 +880,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "WA = Int('WA')\n",
