exercice|color map done

--- a/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
+++ b/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
@@ -848,6 +848,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "--- ---\n",
+    "--- ---\n",
     "# ---\n",
     "## II. Map Coloring\n",
     "\n",
@@ -860,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -879,14 +881,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "WA = Int('WA')\n",
     "mc_solver.add(0 <= WA, WA <= 2)\n",
-    "# ...\n",
-    "# TODO: add the remaining six regions and color constraints"
+    "\n",
+    "# TODO: add the remaining six regions and color constraints\n",
+    "SA = Int('SA')\n",
+    "mc_solver.add(0 <= SA, SA <= 2)\n",
+    "\n",
+    "NT = Int('NT')\n",
+    "mc_solver.add(0 <= NT, NT <= 2)\n",
+    "\n",
+    "Q = Int('Q')\n",
+    "mc_solver.add(0 <= Q, Q <= 2)\n",
+    "\n",
+    "NSW = Int('NSW')\n",
+    "mc_solver.add(0 <= NSW, NSW <= 2)\n",
+    "\n",
+    "V = Int('V')\n",
+    "mc_solver.add(0 <= V, V <= 2)\n",
+    "\n",
+    "T = Int('T')\n",
+    "mc_solver.add(0 <= T, T <= 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "regions = [\"WA\", \"SA\", \"NT\", \"Q\", \"NSW\", \"V\", \"T\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dictionnary of z3.Int type variable\n",
+    "int_region = dict()\n",
+    "for region in regions:\n",
+    "    exec(\"int_region['{}'] = Int('{}')\".format(region, region)) # create an z3.Int type variable instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add color constraints\n",
+    "for region in regions:\n",
+    "    mc_solver.add(0 <= int_region[region], int_region[region] <= 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[WA >= 0,\n",
+       " WA <= 2,\n",
+       " SA >= 0,\n",
+       " SA <= 2,\n",
+       " NT >= 0,\n",
+       " NT <= 2,\n",
+       " Q >= 0,\n",
+       " Q <= 2,\n",
+       " NSW >= 0,\n",
+       " NSW <= 2,\n",
+       " V >= 0,\n",
+       " V <= 2,\n",
+       " T >= 0,\n",
+       " T <= 2]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mc_solver"
    ]
   },
   {
@@ -903,28 +987,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 100,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: add constraints to require adjacent regions to take distinct colors"
+    "mc_solver.add(PbEq(((WA == NT, 1), (WA == SA, 1)), 0))\n",
+    "mc_solver.add(PbEq(((NT == Q, 1), (NT == SA, 1)), 0))\n",
+    "mc_solver.add(PbEq(((SA == Q, 1), (SA == V, 1), (SA == NSW, 1)), 0))\n",
+    "mc_solver.add(Q != NSW)\n",
+    "mc_solver.add(NSW != V)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WA=Green\n",
+      "NT=Blue\n",
+      "SA=Red\n",
+      "Q=Green\n",
+      "NSW=Blue\n",
+      "V=Green\n",
+      "T=Blue\n"
+     ]
     }
-   },
-   "outputs": [],
+   ],
    "source": [
     "assert mc_solver.check() == sat, \"Uh oh. The solver failed to find a solution. Check your constraints.\"\n",
     "print(\"WA={}\".format(colors[mc_solver.model()[WA].as_string()]))\n",
@@ -934,6 +1026,13 @@
     "print(\"NSW={}\".format(colors[mc_solver.model()[NSW].as_string()]))\n",
     "print(\"V={}\".format(colors[mc_solver.model()[V].as_string()]))\n",
     "print(\"T={}\".format(colors[mc_solver.model()[T].as_string()]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Map coloring is a classic example CSP](map.png)"
    ]
   },
   {
