exercice|sudoku solver done

--- a/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
+++ b/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
@@ -1079,131 +1079,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "N = 4"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def Abs(x):\n",
-    "    return If(x >= 0, x, -x)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_queen_solver = Solver() # define solver problem\n",
-    "queens = [Int(\"Q{}\".format(i)) for i in range(N)] # define N queens position\n",
-    "# valide positions between 0 and N\n",
-    "for queen in queens:\n",
-    "    n_queen_solver.add(0<=queen, queen<N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Q0 >= 0,\n",
-       " Q0 < 4,\n",
-       " Q1 >= 0,\n",
-       " Q1 < 4,\n",
-       " Q2 >= 0,\n",
-       " Q2 < 4,\n",
-       " Q3 >= 0,\n",
-       " Q3 < 4]"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n_queen_solver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n_queen_solver.add(Distinct(queens))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Q0 >= 0,\n",
-       " Q0 < 4,\n",
-       " Q1 >= 0,\n",
-       " Q1 < 4,\n",
-       " Q2 >= 0,\n",
-       " Q2 < 4,\n",
-       " Q3 >= 0,\n",
-       " Q3 < 4,\n",
-       " Distinct(Q0, Q1, Q2, Q3)]"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n_queen_solver"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Q0, Q1, Q2, Q3]"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "queens"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "queens"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -1397,20 +1272,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 131,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import chain  # flatten nested lists; chain(*[[a, b], [c, d], ...]) == [a, b, c, d, ...]\n",
     "rows = 'ABCDEFGHI'\n",
     "cols = '123456789'\n",
-    "boxes = [[Int(\"{}{}\".format(r, c)) for c in cols] for r in rows]  # declare variables for each box in the puzzle\n",
+    "boxes = [Int(\"{}{}\".format(r, c)) for r in rows for c in cols]  # declare variables for each box in the puzzle\n",
     "s_solver = Solver()  # create a solver instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 133,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = [[Int(\"{}{}\".format(r,c)) for c in cols] for r in rows]\n",
+    "col = [[Int(\"{}{}\".format(r,c)) for r in rows] for c in cols]\n",
+    "box = [[Int(\"{}{}\".format(r, c)) for r in rs for c in cs] for rs in ('ABC','DEF','GHI') for cs in ('123','456','789')]"
    ]
   },
   {
@@ -1427,26 +1308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 134,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Add constraints that every box has a value between 1-9 (inclusive)\n",
-    "s_solver.add( # YOUR CODE HERE )\n",
+    "s_solver.add(*chain(*[(1 <= b, b <= 9) for b in boxes]))\n",
     "\n",
     "# TODO: Add constraints that every box in a row has a distinct value\n",
-    "s_solver.add( # YOUR CODE HERE )\n",
+    "s_solver.add(*[Distinct(r) for r in row])\n",
     "\n",
     "# TODO: Add constraints that every box in a column has a distinct value\n",
-    "s_solver.add( # YOUR CODE HERE )\n",
+    "s_solver.add(*[Distinct(c) for c in col])\n",
     "\n",
     "# TODO: Add constraints so that every box in a 3x3 block has a distinct value\n",
-    "s_solver.add( # YOUR CODE HERE )"
+    "s_solver.add(*[Distinct(b) for b in box])"
    ]
   },
   {
@@ -1459,13 +1335,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "execution_count": 143,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# use the value 0 to indicate that a box does not have an assigned value\n",
@@ -1479,30 +1350,80 @@
     "         (8, 0, 0, 2, 0, 3, 0, 0, 9),\n",
     "         (0, 0, 5, 0, 1, 0, 3, 0, 0))\n",
     "\n",
+    "values = dict(zip(boxes, [x for l in board for x in l]))\n",
     "# TODO: Add constraints boxes[i][j] == board[i][j] for each box where board[i][j] != 0\n",
-    "s_solver.add( # YOUR CODE HERE )"
+    "s_solver.add(*[k==v for k,v in values.items() if v!=0])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "assert s_solver.check() == sat, \"Uh oh. The solver didn't find a solution. Check your constraints.\"\n",
-    "for row, _boxes in enumerate(boxes):\n",
-    "    if row and row % 3 == 0:\n",
-    "        print('-'*9+\"|\"+'-'*9+\"|\"+'-'*9)\n",
-    "    for col, box in enumerate(_boxes):\n",
-    "        if col and col % 3 == 0:\n",
-    "            print('|', end='')\n",
-    "        print(' {} '.format(s_solver.model()[box]), end='')\n",
+    "assert s_solver.check() == sat, \"Uh oh. The solver didn't find a solution. Check your constraints.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def display(values):\n",
+    "    \"\"\"Display the values as a 2-D grid.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "        values(dict): The sudoku in dictionary form\n",
+    "    \"\"\"\n",
+    "    boxes = values.keys()\n",
+    "    width = 1+max(len(values[s]) for s in boxes)\n",
+    "    line = '+'.join(['-'*(width*3)]*3)\n",
+    "    for r in rows:\n",
+    "        print(''.join(values[r+c].center(width)+('|' if c in '36' else '')\n",
+    "                      for c in cols))\n",
+    "        if r in 'CF': print(line)\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = dict()\n",
+    "for box in boxes:\n",
+    "    values[str(box)]=s_solver.model()[box].as_string()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 8 3 |9 2 1 |6 5 7 \n",
+      "9 6 7 |3 4 5 |8 2 1 \n",
+      "2 5 1 |8 7 6 |4 9 3 \n",
+      "------+------+------\n",
+      "5 4 8 |1 3 2 |9 7 6 \n",
+      "7 2 9 |5 6 4 |1 3 8 \n",
+      "1 3 6 |7 9 8 |2 4 5 \n",
+      "------+------+------\n",
+      "3 7 2 |6 8 9 |5 1 4 \n",
+      "8 1 4 |2 5 3 |7 6 9 \n",
+      "6 9 5 |4 1 7 |3 8 2 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "display(values)"
    ]
   },
   {
@@ -1513,20 +1434,6 @@
     "1. Solve the \"[hardest sudoku puzzle](# https://www.telegraph.co.uk/news/science/science-news/9359579/Worlds-hardest-sudoku-can-you-crack-it.html)\"\n",
     "2. Search for \"3d Sudoku rules\", then extend your solver to handle 3d puzzles"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
