exercice|telegraph hardest sudoku

--- a/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
+++ b/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
@@ -1434,6 +1434,133 @@
     "1. Solve the \"[hardest sudoku puzzle](# https://www.telegraph.co.uk/news/science/science-news/9359579/Worlds-hardest-sudoku-can-you-crack-it.html)\"\n",
     "2. Search for \"3d Sudoku rules\", then extend your solver to handle 3d puzzles"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Hardest Soduku Puzzle in the world"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from itertools import chain  # flatten nested lists; chain(*[[a, b], [c, d], ...]) == [a, b, c, d, ...]\n",
+    "rows = 'ABCDEFGHI'\n",
+    "cols = '123456789'\n",
+    "boxes = [Int(\"{}{}\".format(r, c)) for r in rows for c in cols]  # declare variables for each box in the puzzle\n",
+    "s_solver = Solver()  # create a solver instance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "row = [[Int(\"{}{}\".format(r,c)) for c in cols] for r in rows]\n",
+    "col = [[Int(\"{}{}\".format(r,c)) for r in rows] for c in cols]\n",
+    "box = [[Int(\"{}{}\".format(r, c)) for r in rs for c in cs] for rs in ('ABC','DEF','GHI') for cs in ('123','456','789')]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# TODO: Add constraints that every box has a value between 1-9 (inclusive)\n",
+    "s_solver.add(*chain(*[(1 <= b, b <= 9) for b in boxes]))\n",
+    "\n",
+    "# TODO: Add constraints that every box in a row has a distinct value\n",
+    "s_solver.add(*[Distinct(r) for r in row])\n",
+    "\n",
+    "# TODO: Add constraints that every box in a column has a distinct value\n",
+    "s_solver.add(*[Distinct(c) for c in col])\n",
+    "\n",
+    "# TODO: Add constraints so that every box in a 3x3 block has a distinct value\n",
+    "s_solver.add(*[Distinct(b) for b in box])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use the value 0 to indicate that a box does not have an assigned value\n",
+    "board = ((8, 0, 0, 0, 0, 0, 0, 0, 0),\n",
+    "         (0, 0, 3, 6, 0, 0, 0, 0, 0),\n",
+    "         (0, 7, 0, 0, 9, 0, 2, 0, 0),\n",
+    "         (0, 5, 0, 0, 0, 7, 0, 0, 0),\n",
+    "         (0, 0, 0, 0, 4, 5, 7, 0, 0),\n",
+    "         (0, 0, 0, 1, 0, 0, 0, 3, 0),\n",
+    "         (0, 0, 1, 0, 0, 0, 0, 6, 8),\n",
+    "         (0, 0, 8, 5, 0, 0, 0, 1, 0),\n",
+    "         (0, 9, 0, 0, 0, 0, 4, 0, 0))\n",
+    "\n",
+    "values = dict(zip(boxes, [x for l in board for x in l]))\n",
+    "# TODO: Add constraints boxes[i][j] == board[i][j] for each box where board[i][j] != 0\n",
+    "s_solver.add(*[k==v for k,v in values.items() if v!=0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert s_solver.check() == sat, \"Uh oh. The solver didn't find a solution. Check your constraints.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = dict()\n",
+    "for box in boxes:\n",
+    "    values[str(box)]=s_solver.model()[box].as_string()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "8 1 2 |7 5 3 |6 4 9 \n",
+      "9 4 3 |6 8 2 |1 7 5 \n",
+      "6 7 5 |4 9 1 |2 8 3 \n",
+      "------+------+------\n",
+      "1 5 4 |2 3 7 |8 9 6 \n",
+      "3 6 9 |8 4 5 |7 2 1 \n",
+      "2 8 7 |1 6 9 |5 3 4 \n",
+      "------+------+------\n",
+      "5 2 1 |9 7 4 |3 6 8 \n",
+      "4 3 8 |5 2 6 |9 1 7 \n",
+      "7 9 6 |3 1 8 |4 5 2 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "display(values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
