clean|display sudoku

--- a/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
+++ b/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
@@ -1366,29 +1366,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def display(values):\n",
-    "    \"\"\"Display the values as a 2-D grid.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "        values(dict): The sudoku in dictionary form\n",
-    "    \"\"\"\n",
-    "    boxes = values.keys()\n",
-    "    width = 1+max(len(values[s]) for s in boxes)\n",
-    "    line = '+'.join(['-'*(width*3)]*3)\n",
-    "    for r in rows:\n",
-    "        print(''.join(values[r+c].center(width)+('|' if c in '36' else '')\n",
-    "                      for c in cols))\n",
-    "        if r in 'CF': print(line)\n",
-    "    print()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 194,
    "metadata": {},
    "outputs": [],
@@ -1423,7 +1400,8 @@
     }
    ],
    "source": [
-    "display(values)"
+    "from util import display_sudoku\n",
+    "display_sudoku(values)"
    ]
   },
   {
@@ -1552,7 +1530,7 @@
     }
    ],
    "source": [
-    "display(values)"
+    "display_sudoku(values)"
    ]
   },
   {
