Fix assert solver check should equal to sat

--- a/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
+++ b/Exercises/1_Constraint Satisfaction/AIND-Constraint_Satisfaction.ipynb
@@ -321,7 +321,7 @@
     "for N in sizes:\n",
     "    nq_solver = nqueens(N)\n",
     "    start = time.perf_counter()\n",
-    "    assert nq_solver.check(), \"Uh oh...The solver failed to find a solution. Check your constraints.\"\n",
+    "    assert nq_solver.check() == sat, \"Uh oh...The solver failed to find a solution. Check your constraints.\"\n",
     "    end = time.perf_counter()\n",
     "    print(\"{}-queens: {}ms\".format(N, (end-start) * 1000))\n",
     "    runtimes.append((end - start) * 1000)\n",
